k8s/deploy-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-api
  namespace: learning01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-api
  template:
    metadata:
      labels:
        app: spring-api
    spec:
      containers:
        - name: spring-api
          image: spring-api:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: spring-api
  namespace: learning01
spec:
  type: ClusterIP
  selector:
    app: spring-api
  ports:
    - port: 8080
      targetPort: 8080
