k8s/deploy-vertx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vertx
  namespace: learning01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vertx
  template:
    metadata:
      labels:
        app: vertx
    spec:
      containers:
        - name: vertx
          image: vertx-service:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: vertx
  namespace: learning01
spec:
  type: ClusterIP
  selector:
    app: vertx
  ports:
    - port: 8080
      targetPort: 8080
